# LLMDroid

./: .gitattributes  README.md
ExperimentalDataset/: LefunHealth.apk  README.md  Red_Bull_TV.apk  Twitch.apk  renpho_health.apk
ExperimentalDataset/configs/: CafeNovel.json  MoodTracker.json  NHK_WORLD_JAPAN.json  OceanEx.json  Quora.json  Red_Bull_TV.json  TimePlanner.json  Twitch.json  Wikipedia.json  WishShop.json  fing.json  newpipe-androlog.json  newpipe-jacoco.json  renpho_health.json  tjd_tjdmainS2.json
LLMDroid-Droidbot/: .gitignore
LLMDroid-Droidbot/droidbot/: device.py  droidbot.py  input_event.py  input_manager.py  input_policy2.py  start.py  utils.py
LLMDroid-Droidbot/droidbot/coverage/: androlog_monitor.py  base_monitor.py  jacoco_monitor.py
LLMDroid-Droidbot/droidbot/desc/: action_type.py  device_state.py  state_cluster.py  utg.py  widget.py
LLMDroid-Droidbot/droidbot/policy/: input_policy.py  llm_agent.py  manual_policy.py  prompt.py  utg_based_policy.py  utg_greedy_search_policy.py  utg_naive_search_policy.py  utg_replay_policy.py
LLMDroid-Fastbot/: .gitignore  README-cn.md  README.md  build.gradle  build_native.sh
LLMDroid-Fastbot/monkey/: apk.build.gradle  build.gradle
LLMDroid-Fastbot/monkey/src/main/java/com/android/commands/monkey/: Monkey.java
LLMDroid-Fastbot/monkey/src/main/java/com/android/commands/monkey/source/: MonkeySourceApeNative.java
LLMDroid-Fastbot/monkey/src/main/java/com/android/commands/monkey/utils/: CodeCoverage.java
LLMDroid-Fastbot/monkey/src/main/java/com/bytedance/fastbot/: AiClient.java
LLMDroid-Fastbot/native/: .gitignore  Base.cpp  Base.h  CMakeLists.txt  my_toolchain.cmake  utils.hpp
LLMDroid-Fastbot/native/agent/: AbstractAgent.cpp  AbstractAgent.h  AgentFactory.cpp  AgentFactory.h  CodeCoverageMonitor.cpp  CodeCoverageMonitor.h  GPTAgent.cpp  GPTAgent.h  ModelReusableAgent.cpp  ModelReusableAgent.h  prompt.h
LLMDroid-Fastbot/native/curl/lib/arm64-v8a/pkgconfig/: libcurl.pc
LLMDroid-Fastbot/native/desc/: Action.cpp  Action.h  Activity.cpp  Activity.h  DeviceOperateWrapper.cpp  Element.cpp  Element.h  MergedState.cpp  MergedState.h  Node.cpp  Node.h  State.cpp  State.h  StateStructure.h  StateStucture.cpp  ValuableWidget.cpp  ValuableWidget.h  Widget.cpp  Widget.h
LLMDroid-Fastbot/native/desc/reuse/: ActivityNameAction.cpp  ActivityNameAction.h  ReuseState.cpp  ReuseState.h
LLMDroid-Fastbot/native/events/: Preference.cpp  Preference.h
LLMDroid-Fastbot/native/liboai/components/: chat.cpp
LLMDroid-Fastbot/native/liboai/core/: netimpl.cpp  response.cpp
LLMDroid-Fastbot/native/liboai/include/components/: chat.h
LLMDroid-Fastbot/native/liboai/include/core/: exception.h  netimpl.h  network.h
LLMDroid-Fastbot/native/model/: Graph.cpp  Graph.h  Model.cpp  Model.h
LLMDroid-Fastbot/native/project/jni/: fastbot_native.cpp  fastbot_native.h
LLMDroid-Humanoid/: README.md  config.json  logging.conf  start.py
LLMDroid-Humanoid/droidbot/: droidbot.py  global_log.py  input_policy2.py  start.py
LLMDroid-Humanoid/droidbot/adapter/: droidbot_app.py
LLMDroid-Humanoid/droidbot/desc/: state_cluster.py  utg.py  widget.py
LLMDroid-Humanoid/droidbot/policy/: cv_monitor.py  llm_agent.py  utg_based_policy.py  utg_greedy_search_policy.py  utg_naive_search_policy.py
